<resources>
    <string name="app_name">ItemSniper</string>
    <string name="consumer">Consumer</string>
    <string name="business">Business</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="sign_up">Not A Member? Sign Up!</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="settings">Settings</string>
    <string name="items_tab_string"><b>Items</b></string>
    <string name="stores_tab_string"><b>Stores</b></string>

    <string name="google_maps_key">AIzaSyAdHwcgFDW3xyxciD-MQujf8R7uCeOqVLo</string>

    <string name="consumer_register_title">Register With Us!</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Re-Enter Password</string>
    <string name="next_text">Next</string>

    <string name="consumer_register_title">Register With Us!</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Re-Enter Password</string>
    <string name="next_text">Next</string>
</resources>
