<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="8dp"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/round_white_container"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_height="400dp">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_width="200dp"
            android:layout_height="80dp" />

        <EditText
            android:id="@+id/email_edit_text"
            android:hint="@string/email_hint"
            android:textColor="@color/pictonBlue"
            android:background="@drawable/text_field"
            android:padding="10dp"
            android:textColorHint="@color/silverGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:textColor="@color/pictonBlue"
            android:hint="@string/password_hint"
            android:padding="10dp"
            android:background="@drawable/text_field"
            android:textColorHint="@color/silverGray"
            android:password="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/sign_in_button"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:background="@drawable/green_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/pictonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/consumer_sign_up"
                android:textStyle="bold"
                android:text="@string/consumer"
                android:textColor="@color/white"
                android:background="@drawable/green_button"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"/>
            <Button
                android:id="@+id/business_sign_up"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/business"
                android:background="@drawable/blue_button"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>